# b12od

./: .gitignore  BUILD.md  CMakeLists.bindings.txt  CMakeLists.python.txt  CMakeLists.rust.txt  CMakeLists.txt  CMakeLists.wasm.txt  README.md
.github/workflows/: ci.yml
include/b12od/: bebuf.h  bolt12_json_tlv.h  bolt12_offer_json.h  json_encode.h  safe_char.h  tobytesbuf.h
python/: MANIFEST.in  README.md  setup.cfg  setup.py
python/b12od/: b12od.pyx
python/bolt12_offer_decode/: __init__.py
python/examples/: demo.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: demo.rs
rust/src/: lib.rs  main.rs
src/lib/: bebuf.h  bech32_decode.c  bech32_decode.h  bigsize.c  bigsize.h  bolt12_decode.c  bolt12_decode.h  bolt12_json.c  bolt12_json.h  bolt12_json_tlv.c  bolt12_json_tlv.h  bolt12_offer_decode.c  bolt12_offer_decode.h  bolt12_offer_json.c  bolt12_offer_json.h  bolt12_tlv_field_check.c  bolt12_tlv_field_check.h  bolt12_types.h  hex_enc.c  hex_enc.h  json_encode.h  safe_char.c  safe_char.h  tlv.c  tlv.h  tlv_field_check.h  tobytesbuf.h
tests/: offer_strings  offer_tests.txt  test_all.sh  test_results
wasm/: CMakeLists.txt  README.md  app.js  index.html  test.js
wasm/examples/: app.js  index.html
