[metadata]
name = bolt12_offer_decode
version = 0.1.0
description = Python bindings for bolt12_offer_decode C library
author = 21M4TW
author_email = 21M4TW@proton.me
license = "BSD 2-Clause"
long_description_content_type = text/markdown
url = https://github.com/21M4TW/bolt12_offer_decode
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C
    Programming Language :: Cython
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
