[package]
name = "b12od"
version = "0.1.0"
edition = "2024"
description = "Bolt12 Offer Decoding Library"
repository = "https://github.com/21M4TW/b12od"
license-file = "LICENSE"

include = [
    "build.rs",
    "src/**",
    "b12od-lib/**",
    "LICENSE",
    "README.md"
]

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"

[lib]
crate-type = ["rlib"]
